# ChangeLog for dev-haskell/highlighting-kate
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/highlighting-kate/ChangeLog,v 1.10 2013/06/22 22:22:41 slyfox Exp $

*highlighting-kate-0.5.3.9 (22 Jun 2013)

  22 Jun 2013; Sergei Trofimovich <slyfox@gentoo.org>
  +highlighting-kate-0.5.3.9.ebuild:
  Version bump.

*highlighting-kate-0.5.3.8 (02 Apr 2013)

  02 Apr 2013; Mark Wright <gienah@gentoo.org>
  +highlighting-kate-0.5.3.8.ebuild:
  Bump highlighting-kate to 0.5.3.8

*highlighting-kate-0.5.3.5 (09 Feb 2013)

  09 Feb 2013; Sergei Trofimovich <slyfox@gentoo.org>
  +highlighting-kate-0.5.3.5.ebuild:
  Version bump.

*highlighting-kate-0.5.3.4 (05 Jan 2013)

  05 Jan 2013; Mark Wright <gienah@gentoo.org>
  +highlighting-kate-0.5.3.4.ebuild:
  Bump highlighting-kate to 0.5.3.4

*highlighting-kate-0.5.3.3 (25 Nov 2012)

  25 Nov 2012; Mark Wright <gienah@gentoo.org>
  +highlighting-kate-0.5.3.3.ebuild:
  Bump highlighting-kate to 0.5.3.3

  12 Sep 2012; Alexander Vershilov <qnikst@gentoo.org>
  highlighting-kate-0.2.9-r1.ebuild, highlighting-kate-0.5.0.5.ebuild,
  highlighting-kate-0.5.1.ebuild:
  move dev-haskell/highlighting-kate/highlighting-kate-0.5.0.5.ebuild ebuild to
  mirror://hackage

*highlighting-kate-0.5.1 (02 Jun 2012)

  02 Jun 2012; Mark Wright <gienah@gentoo.org> +highlighting-kate-0.5.1.ebuild:
  Bump highlighting-kate to 0.5.1

*highlighting-kate-0.5.0.5 (10 Mar 2012)

  10 Mar 2012; Sergei Trofimovich <slyfox@gentoo.org>
  +highlighting-kate-0.5.0.5.ebuild, metadata.xml:
  Version bump.

*highlighting-kate-0.2.9-r1 (03 May 2011)

  03 May 2011; Sergei Trofimovich <slyfox@gentoo.org>
  -highlighting-kate-0.2.9.ebuild, +highlighting-kate-0.2.9-r1.ebuild:
  USE flags work this time (passed to configure phase).

*highlighting-kate-0.2.9 (25 Apr 2011)

  25 Apr 2011; Sergei Trofimovich <slyfox@gentoo.org>
  +highlighting-kate-0.2.9.ebuild, +metadata.xml:
  Initial version.