@@ -1,28 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST highlighting-kate-0.2.9.tar.gz 767587 SHA256 f3ad0a001848f161270a9589242a91e590108c612d96dca8b4db705c03a86856 SHA512 2949ca8bbe22e301019d6fb1d421d3d8300e0fe402fb30f17342d150366dc33b9ea6fb268f64a3f0460cbcf683cab883ed6a3220d634b1cb4862261dd5a4a21e WHIRLPOOL aa44a23266f9d8b3e93111cc0bad64d0d5ec5594f8b97da68b6657df5e9a8a9c0dde59f75281507e01bec486c27ee285f55432c89e7e53f4e23ab43dae22aac1
-DIST highlighting-kate-0.5.0.5.tar.gz 617450 SHA256 1bdd716ec7f285f1923ddcf376da4c802c5c1e99f69029cbe7041a40981fb300 SHA512 d6e1cabc9962cb7aa9ded30c71b247959c3ca8f93e1a6b0f1ee1597e8b4dcc866e766e0b396ecb89ce976847ad00497031a6bdd56b7e5648df02cbad0098c2b1 WHIRLPOOL e8643b5c0960a08b97e666d9cbf30fddf52b8e4f6ba24b2e8ecb7d0b51f924aa710a46d9dbfae13094cae4f71dfffa7a34d4bb8058ad3a476718fc107fa61ac5
-DIST highlighting-kate-0.5.1.tar.gz 617979 SHA256 5282ed3e2a35d37e92484835e126d0c82020aa4308121049cd49b3f372380f50 SHA512 d121a9b51dfc2ac1692fe69b9a7777df37a50bdb5ffbb5813d99756b22b314d232799c3f655e364a6640489e5e3f29eb75c8064d055052f0bfb6fbb3251afe5e WHIRLPOOL 590e86dfc6f4d9e2bc4a3780a91e2fad3f7d3520b84381bc041f4043429ed774bf84b2a93eb231b13dc875fabddb34c33b44a87ab0184998f44bdf4ec1e95a9e
-DIST highlighting-kate-0.5.3.3.tar.gz 639766 SHA256 5680414b3ca5a332f096b66bfebdfa7df185b4d2c4b58583dc644da096a05d22 SHA512 f21ff83df47c2e7a94cacce674f792193e33f9663f87facefa8119d3c04ec318926535e791d689bc75fc56d790227fdfd364e20729a2ca8719827ad2080f139f WHIRLPOOL b6b8894d64fe7ea58fd5ee6918770c512fa5d47940e1cc1bf98306f9cc755fb305a13fbfa18c09199f3372be29e348be14b09e5d69b29fd32069e6ab956da36b
-DIST highlighting-kate-0.5.3.4.tar.gz 629924 SHA256 e7f4d8786ba213e0351aa0e8bda5837a5fc8161cc6a9bf8be141591c4e6ea9f6 SHA512 7ef8db76606255c8ef083b4cea889b3f88090c14f24f2d17f3eb504b93b2e176abf6226809ad15c34b30be0eae8b3dfc0568f24230ddf8f021239d895f40b665 WHIRLPOOL 4e46c64f22b8052ebc5e23be3bf0df85c82f0f6f27beaef8ec4082d416c0fc1b2715686f827182dcace6346197d3130ff425f2f19914cb83e2fcf0301fbabd02
-DIST highlighting-kate-0.5.3.5.tar.gz 628362 SHA256 637bf142fb40c7fc748b3f6ee97661799ef87c7d78fe4769b3e7f017c780e654 SHA512 1c5d1fb3d12c87d369645ea0302012d147332424c2dd5e5c7ee912ac6e6d0c915176d0efbf7c85c294db8f25e35bfcbef0891ba65983e6a9fd651ffef4f6e709 WHIRLPOOL 92bd21024929b78d70102b50a4ac1712cdcd1bd682d55ea959cd0c8ffdd7149272204b1e2ea512f8fee4e1777be9ed38184950fa080f4d1880bf5d28a7ec5f9a
-DIST highlighting-kate-0.5.3.8.tar.gz 661579 SHA256 5ca00f73773b1638bbbdae736d41c889d3f971dbdfbfacdf7ab5001e21afafb9 SHA512 64462a341016c635867f7ed7e964d0d00f981c5a5ae779d08fb508ede93d58fc06807d1cb8a877ff4aba5560812489ee50a10f43e003955d06ef7bb7a124564d WHIRLPOOL 5795c5e59060a2ef4c7c8f530cbea4c8e0041731c73d7a1b75c825c0fcaf1e1bf321ac840c6fbf9bfaef482eba4c65c9c5ad0abc91d94a55bf56eadbe92a56a9
 DIST highlighting-kate-0.5.3.9.tar.gz 662621 SHA256 0ca2abc648da30cebfffcdf22140a380df3c5d98c80984bf97ee416c351a1395 SHA512 72bac3557650a5a575071b7c8a1137a472dcfe2f2b763725127315ce61aaf4bfc5f84e84c70d56b9232be3512bceaeeb1afc32db60b0839cea1cd152d230254c WHIRLPOOL b3f2ddc59bd3a86aeec1577143e2e5996e7abc6e907694d792868795fe9eb01685106a854687398c8aeabaab30c57f699d5d7717980f10237379bf14e64c1041
-EBUILD highlighting-kate-0.2.9-r1.ebuild 850 SHA256 8c54d3231515f7e0b3c9976a3acae3bde0f282e1cf99028dc0c5a001545e9698 SHA512 d10d2a53958dbafb414c952000c13de4a1a77a52374e4966948d7a11a437c395461fecfc884a0a1dda0791064feef09931dfad3c82493c73bdc6b3bf013d5bd2 WHIRLPOOL 0ab5cfab6240642c2e148be853d1906243119a970f94a25b525434e6587233ae1cfe4a0c6a30bf840fbf88ab19ed2f30574494214348689defedf07c4f61cdfc
-EBUILD highlighting-kate-0.5.0.5.ebuild 1032 SHA256 bf7a701d27a57c31c226b8ffde145cf284bb398949f80aa150fb813691e2acdb SHA512 14d5201ea09b1ffb19942d200bc1381b1045810713f26d6497e41de5de122bbe764c1a8eb59d6d6549356ca0f38d972fd238a6c74989974642cfe2333561a5a0 WHIRLPOOL fd888673278136ea7ca03748da416b282c8063762e1b04c018fbaa1409b680a0d32f97d617da6bbe65b5ec7ed303835e1910d5cc9de64452b38a23775d2427df
-EBUILD highlighting-kate-0.5.1.ebuild 993 SHA256 affc1b35f7a16ee1ab4094a4c76fb224e8d1405fb3489486503c99549c3ca02b SHA512 3ff32936ce07448b7b8095a13dafc99409490d45ae3886afb8ad36b8366ba558a7bf5cee28616643ce0d531dcef6c117afbf65b0b77fcc26d4f4abc534939eb9 WHIRLPOOL eca11c9e322caa67b7034d8a02bc3cb382d55fea9890804c89fa7e5a24993de4bf70c7109269fca843c603b30855e6541aff0b4c91f910c73dfe69844818fdca
-EBUILD highlighting-kate-0.5.3.3.ebuild 1102 SHA256 02fe5ef3bfecbf1f78b7465180df90ba3820a90bf09c8cfd06aeff0a544cdba0 SHA512 6620bb9882b80e3f147b71ea66cad886bd0bec0e0bb8fb6e33bd3e9bb9c5bbdac5652fc01aae84c4f0ac6fe37941bc0cec01b9ced456c6b9f7fd9928ae6c3f4c WHIRLPOOL 04731173a56ffe32f1d13b762902b9e22ee85f3297a4e599b00834ba76b8430247e14b8da9f74aa3fd37cfc7f3d40227eb1e9474f3d0cca7c5ac06d79c2fa1a0
-EBUILD highlighting-kate-0.5.3.4.ebuild 1103 SHA256 04dd094f7a5f7719b78ab122d09584efc8373585fb68dd1001f31c07137cc2b8 SHA512 bcbeaecc394fdea060e9afc9400bc73526d9ce45c589dc5570b1ea0adf279421dbd940906c9804423ca72c1808c1fceb929f89cca4a586687f82c90f0f9d8322 WHIRLPOOL 68f32d5c600d2bacb8ca60e730d6418591724f3ebff2336ad659531220078297582cd8fcffc3b791bf6b8ed2e5c0cf4bfe3f74bd108b8cd47244a9245276a972
-EBUILD highlighting-kate-0.5.3.5.ebuild 1103 SHA256 7076bbdd748834d460d32aea0075f6f3d35d7574d426c487c339b7efb6b1bc98 SHA512 5367d04d474f3c5acbe15368416beb8b85bc8507f79fc7828e9287d1604a9b2741751ec8acc431b3c581279239a8676073b5fd248f87f1f8ed2c34aa0dcbf7f9 WHIRLPOOL 1506c91c4b2c6ddc29a43972e45041e4bc8be678e6269fd16d8dc4661ea3cba6a2ba08b49267f063817768cc6d6559e0d9b35d85339e08a7d7b6a19f8443c196
-EBUILD highlighting-kate-0.5.3.8.ebuild 1100 SHA256 d7030ec1c46334175e48263e5ad419be3926e9f1883942b07c78be24d8a672d1 SHA512 d7c279ee26e8b47a22da846cee11eb4b889f8ae1662397dc3656feee276fd161c3747d8535780d5dc524e611b40b02ebf5de9f4f4c30232f2c2baacf3499d06e WHIRLPOOL 4940df2ee226d03fb8759e2d04b3e2eca4fe1cbeace8d55f1bcac264615e03a83f54cc9067c576d6f36b0777d92ae55d74b7ff295bf5ca5c7a4467f901ff7093
+DIST highlighting-kate-0.5.5.tar.gz 668017 SHA256 4943b59d2ebe23c73f028c449cf973bdc2ea0f3e9e1f696eb7b7f5049da6fd7a SHA512 50c24f0a7f247ff1c5410aa31b270851c88cc3c24480da332c0a344c6959a7f8748dad4650374844b36eccee0824c991797d8327bf2b15ae055918acf129bd95 WHIRLPOOL 227383e60e6b9f2eddf58eea1936eaf982757a5a54a2c1aefb2dffc36606bc6b5c76b65c19b67c90498a58cd75585a57a152a89125c5e0b401d5096af6a970f0
 EBUILD highlighting-kate-0.5.3.9.ebuild 1100 SHA256 d6f0d329262b409666e8b5adfc462721a6c239e9d4d143c6dfa110e16b5023f8 SHA512 ae3314eca8a9e2f90d799e1f0faf010fdd1ad9f0f5448ba88efb8c9321c9934d3f2a50ba0b3a22bba114e08a8b0130a375b0c64e4da53cdee88fc696f278c010 WHIRLPOOL 6f579ad8935a02b1649a5880863e3fe859d653d5eb2b8ad3ee626766f243006babde5db73911862c8e3b5b1424a0222ef1907681175cb45b1754038b13dc277f
-MISC ChangeLog 1988 SHA256 35ccacacbe8d6282b88e901074960ae04bb475be3e8238737814b085e18cd22e SHA512 6900c9beebb0da79e4bb514f5ed1373eda7145c5be8a095c269ba8c22cf5c0f5d5cc8017435108d277a59c0376279aefcf791767c1005a631348ac396bb790ec WHIRLPOOL 132733011c013f0269a28a10a7bf4bcc83a0c4b2c6a468f7824c5df656b281cb634f2f88d1dc701e6b557aa12f7ecb6c4d2d509b330983d4fbb87500810fa968
+EBUILD highlighting-kate-0.5.5.ebuild 1098 SHA256 51419def251e548d31b3a7de36255da6d4a50dd5f1563737afb340e92d620335 SHA512 4a6b760bb031e44a71ca6bbc9eb7a51fec025eb41a947b6a408fa99ffdb2c077bd086eec061dfecaa89aa52c9ba9500d4625f8f1793d574b04250457019b42d7 WHIRLPOOL 1e741e5ffcded49c38b6033c8257954c572f0ec1c5b5dc3dafde55171ffd3b2c64ac9cc21eb45856f77812ffb82ac6beb14a121ebe7143902dbafa89af9ce7ce
+MISC ChangeLog 2384 SHA256 7fafb76a727f0cd6dd2dbd64148a2595e37267418bd20c5939ea16f05c50597f SHA512 300e0ee06686898e7119d839ec8eef9dc0927b79a51ea053d4c749e611f311ebcc83429701943d99fdeba7590b31518750fc9a140162d43fd7135ae33edffe43 WHIRLPOOL 9a264e0a84b38e72209e2a9113d1d8cdd74ee8eee410387527c5caa85040517183b298cf74c416217f0408154eaf328c6e4319822b23a747cf9225198d1ac6b3
 MISC metadata.xml 837 SHA256 cb2cf01e128cbdb0d1a1ffa50982edae3ee45df4ea32561bd5aa26637df80a48 SHA512 a8739eabe49d19c5b10c74e4f35a9ae1dbea12317af477a0cc58aac926c5aa63dc3efd50b3199a84807f87b4e089d47733620f70f08389c947e2474027a2e811 WHIRLPOOL 3ea5bf86a84f388451e7b513da2fd64379869126ecc37961a5894619267e1c2fe2a83055f3654bca154f1f118c4c29559d77034400d8d9e57a7b0a9ebcf86638
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHGIz8ACgkQcaHudmEf86pU7ACfWBQSv+zjFmZ0b4Hzy53XQd4+
-gCQAnjhrddhUskchbB+r119uEbdxHKAv
-=bIaI
+iEYEAREIAAYFAlHyI1oACgkQcaHudmEf86oyiwCeMUD7j7Io6OtLjaB4dcXyJtE3
+a6sAn0Nr5UqpGpWSjYC6VoeFgS04nkyv
+=EZmk
 -----END PGP SIGNATURE-----
