@@ -1,30 +1,0 @@
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/highlighting-kate/Attic/highlighting-kate-0.2.9-r1.ebuild,v 1.2 2012/09/12 14:49:13 qnikst Exp $
-
-# ebuild generated by hackport 0.2.13
-
-EAPI="3"
-
-CABAL_FEATURES="bin lib profile haddock hscolour"
-inherit haskell-cabal
-
-DESCRIPTION="Syntax highlighting binary and library using kate syntax files"
-HOMEPAGE="http://github.com/jgm/highlighting-kate"
-SRC_URI="mirror://hackage/packages/archive/${PN}/${PV}/${P}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE="executable"
-
-RDEPEND="dev-haskell/parsec
-		dev-haskell/regex-pcre-builtin
-		dev-haskell/xhtml
-		>=dev-lang/ghc-6.8.2"
-DEPEND="${RDEPEND}
-		>=dev-haskell/cabal-1.2"
-
-src_configure() {
-	cabal_src_configure $(cabal_flag executable)
-}
