@@ -1,36 +1,0 @@
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/highlighting-kate/Attic/highlighting-kate-0.5.3.3.ebuild,v 1.1 2012/11/25 06:05:27 gienah Exp $
-
-EAPI=5
-
-# ebuild generated by hackport 0.3.9999
-
-CABAL_FEATURES="bin lib profile haddock hoogle hscolour"
-inherit haskell-cabal
-
-DESCRIPTION="Syntax highlighting"
-HOMEPAGE="http://github.com/jgm/highlighting-kate"
-SRC_URI="mirror://hackage/packages/archive/${PN}/${PV}/${P}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="0/${PV}"
-KEYWORDS="~amd64 ~x86"
-IUSE="executable pcre-light"
-
-RDEPEND=">=dev-haskell/blaze-html-0.4.2:=[profile?]
-		<dev-haskell/blaze-html-0.6:=[profile?]
-		dev-haskell/mtl:=[profile?]
-		dev-haskell/parsec:=[profile?]
-		dev-haskell/regex-pcre-builtin:=[profile?]
-		pcre-light? ( dev-haskell/pcre-light:=[profile?] )
-		!pcre-light? ( dev-haskell/regex-pcre-builtin:=[profile?] )
-		>=dev-lang/ghc-6.10.4:="
-DEPEND="${RDEPEND}
-		>=dev-haskell/cabal-1.6"
-
-src_configure() {
-	cabal_src_configure \
-		$(cabal_flag executable) \
-		$(cabal_flag pcre-light)
-}
